cabal-version:       >=1.10
name:                coherence
version:             0.1.0.0
license-file:        LICENSE
author:              Josh Miller
maintainer:          notjoshmiller@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable coherence
  main-is:             Main.hs
  build-depends:       
    aeson,
    deriving-aeson,
    base >=4.14 && <4.15
  default-language:    Haskell2010
